--- a/MusicProject.ipynb
+++ b/MusicProject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "9151c7c3-55c6-40da-887f-608ff768646c",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "array(['HipHop', 'Dance'], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,14 +28,16 @@
    "source": [
     "import pandas as pd\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "music_data = pd.read_csv('music.csv')\n",
     "X = music_data.drop(columns=['genre'])\n",
     "y = music_data['genre']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
     "\n",
     "model = DecisionTreeClassifier()\n",
-    "model.fit(X, y)\n",
-    "predimodel.predict([[21, 1], [22, 0]])"
+    "model.fit(X_train, y_train)\n",
+    "predictions = model.predict(X_test)"
    ]
   },
   {
