--- a/MusicProject.ipynb
+++ b/MusicProject.ipynb
@@ -29,6 +29,7 @@
     "import pandas as pd\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "music_data = pd.read_csv('music.csv')\n",
     "X = music_data.drop(columns=['genre'])\n",
@@ -37,7 +38,7 @@
     "\n",
     "model = DecisionTreeClassifier()\n",
     "model.fit(X_train, y_train)\n",
-    "predictions = model.predict(X_test)"
+    "predictions = model.predict(X_test)\n"
    ]
   },
   {
