--- a/MusicProject.ipynb
+++ b/MusicProject.ipynb
@@ -38,7 +38,10 @@
     "\n",
     "model = DecisionTreeClassifier()\n",
     "model.fit(X_train, y_train)\n",
-    "predictions = model.predict(X_test)\n"
+    "predictions = model.predict(X_test)\n",
+    "\n",
+    "store = accuracy_score(y_test, predictions)\n",
+    "store"
    ]
   },
   {
