--- a/MusicProject.ipynb
+++ b/MusicProject.ipynb
@@ -2,52 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "id": "9151c7c3-55c6-40da-887f-608ff768646c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\dhrut\\anaconda3\\Lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but DecisionTreeClassifier was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "array(['HipHop', 'Dance'], dtype=object)"
+       "0.75"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.tree import DecisionTreeClassifier # for decision tree model\n",
+    "from sklearn.model_selection import train_test_split # for spliting data into training and testing sets\n",
+    "from sklearn.metrics import accuracy_score # for calculating accuracy of the model\n",
     "\n",
-    "music_data = pd.read_csv('music.csv')\n",
-    "X = music_data.drop(columns=['genre'])\n",
+    "music_data = pd.read_csv('music.csv') # load data from the file\n",
+    "# input features X and target variable y\n",
+    "X = music_data.drop(columns=['genre']) \n",
     "y = music_data['genre']\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2) # split data into training and testing sets\n",
     "\n",
+    "# create and train model\n",
     "model = DecisionTreeClassifier()\n",
     "model.fit(X_train, y_train)\n",
-    "predictions = model.predict(X_test)\n",
+    "predictions = model.predict(X_test) # make predictions\n",
     "\n",
-    "store = accuracy_score(y_test, predictions)\n",
+    "store = accuracy_score(y_test, predictions) # calculate accuracy\n",
     "store"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9437de00-9b43-4820-b69c-88eae3a30f96",
+   "id": "b50d6353-e411-40e0-ad21-8a7fdcbd6e1e",
    "metadata": {},
    "outputs": [],
    "source": []
